; ModuleID = '/home/carl/AnghaBench/git/refs/extr_iterator.c_prefix_ref_iterator_begin.c'
source_filename = "/home/carl/AnghaBench/git/refs/extr_iterator.c_prefix_ref_iterator_begin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_iterator = type { i32 }
%struct.prefix_ref_iterator = type { i32, i32, %struct.ref_iterator*, %struct.ref_iterator }

@prefix_ref_iterator_vtable = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ref_iterator* @prefix_ref_iterator_begin(%struct.ref_iterator* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.ref_iterator*, align 8
  %5 = alloca %struct.ref_iterator*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.prefix_ref_iterator*, align 8
  %9 = alloca %struct.ref_iterator*, align 8
  store %struct.ref_iterator* %0, %struct.ref_iterator** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = load i8, i8* %10, align 1
  %12 = icmp ne i8 %11, 0
  br i1 %12, label %18, label %13

13:                                               ; preds = %3
  %14 = load i32, i32* %7, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %18, label %16

16:                                               ; preds = %13
  %17 = load %struct.ref_iterator*, %struct.ref_iterator** %5, align 8
  store %struct.ref_iterator* %17, %struct.ref_iterator** %4, align 8
  br label %38

18:                                               ; preds = %13, %3
  %19 = call %struct.prefix_ref_iterator* @xcalloc(i32 1, i32 24)
  store %struct.prefix_ref_iterator* %19, %struct.prefix_ref_iterator** %8, align 8
  %20 = load %struct.prefix_ref_iterator*, %struct.prefix_ref_iterator** %8, align 8
  %21 = getelementptr inbounds %struct.prefix_ref_iterator, %struct.prefix_ref_iterator* %20, i32 0, i32 3
  store %struct.ref_iterator* %21, %struct.ref_iterator** %9, align 8
  %22 = load %struct.ref_iterator*, %struct.ref_iterator** %9, align 8
  %23 = load %struct.ref_iterator*, %struct.ref_iterator** %5, align 8
  %24 = getelementptr inbounds %struct.ref_iterator, %struct.ref_iterator* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @base_ref_iterator_init(%struct.ref_iterator* %22, i32* @prefix_ref_iterator_vtable, i32 %25)
  %27 = load %struct.ref_iterator*, %struct.ref_iterator** %5, align 8
  %28 = load %struct.prefix_ref_iterator*, %struct.prefix_ref_iterator** %8, align 8
  %29 = getelementptr inbounds %struct.prefix_ref_iterator, %struct.prefix_ref_iterator* %28, i32 0, i32 2
  store %struct.ref_iterator* %27, %struct.ref_iterator** %29, align 8
  %30 = load i8*, i8** %6, align 8
  %31 = call i32 @xstrdup(i8* %30)
  %32 = load %struct.prefix_ref_iterator*, %struct.prefix_ref_iterator** %8, align 8
  %33 = getelementptr inbounds %struct.prefix_ref_iterator, %struct.prefix_ref_iterator* %32, i32 0, i32 1
  store i32 %31, i32* %33, align 4
  %34 = load i32, i32* %7, align 4
  %35 = load %struct.prefix_ref_iterator*, %struct.prefix_ref_iterator** %8, align 8
  %36 = getelementptr inbounds %struct.prefix_ref_iterator, %struct.prefix_ref_iterator* %35, i32 0, i32 0
  store i32 %34, i32* %36, align 8
  %37 = load %struct.ref_iterator*, %struct.ref_iterator** %9, align 8
  store %struct.ref_iterator* %37, %struct.ref_iterator** %4, align 8
  br label %38

38:                                               ; preds = %18, %16
  %39 = load %struct.ref_iterator*, %struct.ref_iterator** %4, align 8
  ret %struct.ref_iterator* %39
}

declare dso_local %struct.prefix_ref_iterator* @xcalloc(i32, i32) #1

declare dso_local i32 @base_ref_iterator_init(%struct.ref_iterator*, i32*, i32) #1

declare dso_local i32 @xstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
